--- a/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/foundation.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/foundation.yml
@@ -141,6 +141,7 @@
 
 - type: entity
   id: ModularTallTripleCabinetFoundation
+  categories: [ HideSpawnMenu ]
   parent: BaseModularFoundation
   name: modular tall triple cabinet foundation
   description: tall triple cabinet, now with layout!
