announce bugfix + new sounds

--- a/Resources/Audio/SS220/Announcements/attributions.yml
+++ b/Resources/Audio/SS220/Announcements/attributions.yml
@@ -1,4 +1,4 @@
 - files: ["cluwne_comm_announce.ogg"]
-  license: "CC0-1.0"
-  copyright: "Downloaded from free library, modified by SkaldetSkaeg"
+  license: "Custom"
+  copyright: "Downloaded from free library, remix created by SkaldetSkaeg"
   source: "https://sound-pack.net/imitaciya-loshadinogo-rzhaniya-na-trube-2-zvuk-mp3"
