--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -29,6 +29,7 @@
     tags:
     - Document
     - Paper
+    - Trash # SS220-TaRaKaCheCki
   - type: Appearance
   - type: FaxableObject
   - type: PaperVisuals
