--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -640,3 +640,6 @@ PresentRandomUnsafe: null
 PresentRandomInsange: null
 PresentRandomCash: null
 PresentRandomCoal: null
+
+#2025-04-20
+DrinkBerryСompote: DrinkBerryCompote
