--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -641,5 +641,5 @@ PresentRandomInsange: null
 PresentRandomCash: null
 PresentRandomCoal: null
 
-#2025-04-20
+#2025-04-20  PR #2870 Fix letter C in prototype
 DrinkBerryСompote: DrinkBerryCompote
