post-sec-review-fixes

--- a/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/Filled/Parts/filled.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/Filled/Parts/filled.yml
@@ -15,7 +15,7 @@
   - type: EntityTableContainerFill
     containers:
       storagebase: !type:NestedSelector
-        tableId: MaintenanceLockerLoot
+        tableId: MaintenanceCabinetDrawerLoot
 
 # Should thought of changing all to loot tables simultaneous with Wizdens
 # Science
@@ -23,70 +23,135 @@
 - type: entity
   id: ModularPartCabinetScienceEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureScienceEquipmentFillPart]
+  parent: ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: ScienceCabinetDrawerEquipment
 
 - type: entity
   id: ModularPartCabinetScienceClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureScienceClothingFillPart]
+  parent: ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: ScienceCabinetDrawerClothes
 
 - type: entity
   id: ModularPartDoubleCabinetScienceEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureScienceEquipmentFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: ScienceCabinetDrawerEquipment
 
 - type: entity
   id: ModularPartDoubleCabinetScienceClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureScienceClothingFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: ScienceCabinetDrawerClothes
 
 # Engineer
 
 - type: entity
   id: ModularPartCabinetEngineerEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureEngineerEquipmentFillPart]
+  parent: ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: EngineerCabinetDrawerEquipment
 
 - type: entity
   id: ModularPartCabinetEngineerClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureEngineerClothingFillPart]
+  parent: ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: EngineerCabinetDrawerClothes
 
 - type: entity
   id: ModularPartDoubleCabinetEngineerClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureEngineerClothingFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: EngineerCabinetDrawerClothes
 
 - type: entity
   id: ModularPartDoubleCabinetEngineerEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureEngineerEquipmentFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: EngineerCabinetDrawerEquipment
 
 # Medical
 
 - type: entity
   id: ModularPartCabinetMedicalEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureMedicalEquipmentFillPart]
+  parent: ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: MedicalCabinetDrawerEquipment
 
 - type: entity
   id: ModularPartCabinetMedicalClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartCabinetw1h1, ModuleFurnitureMedicalClothingFillPart]
+  parent:  ModularPartCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: MedicalCabinetDrawerClothes
 
 - type: entity
   id: ModularPartDoubleCabinetMedicalEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureMedicalEquipmentFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: MedicalCabinetDrawerEquipment
 
 - type: entity
   id: ModularPartDoubleCabinetMedicalClothFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartDoubleCabinetw1h1, ModuleFurnitureMedicalClothingFillPart]
+  parent: ModularPartDoubleCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: MedicalCabinetDrawerClothes
 
 # Lawyer
 
 - type: entity
   id: ModularPartFillingCabinetLawyerEquipFilledw1h1
   categories: [ HideSpawnMenu ]
-  parent: [ ModularPartFillingCabinetw1h1, ModuleFurnitureLawyerEquipmentFillPart]
+  parent: ModularPartFillingCabinetw1h1
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:NestedSelector
+        tableId: LawyerCabinetDrawerEquipment
