old-ded-ne-zabul-tabletki-no-zabil-vpisat-datafield-v-prototype

--- a/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/base.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Storage/ModuleFurniture/base.yml
@@ -31,6 +31,7 @@
   - type: ContainerContainer
     containers:
       module-furniture: !type:Container
+        showEnts: true
   - type: InteractionOutline
   - type: Clickable
   - type: Tag
